--- a/poster/beamerthemepenn.sty
+++ b/poster/beamerthemepenn.sty
@@ -121,10 +121,10 @@ coltext=penndkbl,outer arc=5pt,arc=0pt]
         \vspace{-18ex}
         \centering
         %\raisebox{1ex}{\rule{0.36135\textwidth}{4mm}}
-        \raisebox{1ex}{\rule{0.224\textwidth}{4mm}}
-        \usebeamercolor{author in headline}{\color{fg}\huge{\, \insertauthor \,}}
+        \raisebox{1ex}{\rule{0.19\textwidth}{4mm}}
+        \usebeamercolor{author in headline}{\color{fg}\Large{\, \insertauthor \,}}
         %\raisebox{1ex}{ \rule{0.36135\textwidth}{4mm} }\\[1ex]
-        \raisebox{1ex}{ \rule{0.224\textwidth}{4mm} }\\[1ex]
+        \raisebox{1ex}{ \rule{0.19\textwidth}{4mm} }\\[1ex]
         \usebeamercolor{institute in headline}{\color{fg}\Large{\insertinstitute}\\[1ex]}  
       \end{column}
             \begin{column}{.01\paperwidth}
